# interactweb_backend

./: .gitignore  pyproject.toml
config/: settings.py  urls.py
form/: models.py
form/migrations/: 0001_initial.py
news/: models.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_remove_news_preview_url_news_image.py
